...
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/endDatePicker" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/assessmentsRecyclerView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scrollbars="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/assessments" />

            <Button
                android:id="@+id/addAssessmentButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="addAssessmentClick"
                android:text="@string/add_assessment_button" />

            <TextView
...
